añade directiva de ejemplo

--- a/src/app/hijo/hijo.component.html
+++ b/src/app/hijo/hijo.component.html
@@ -1,4 +1,4 @@
-<p>hijo works!</p>
+<p appP>hijo works!</p>
 <p>variable compartida en el componente hijo: <span>{{ejemploS.getVariableCompartida()}}</span></p>
 <p> el Padre me envió: <span>{{mensajeRecibidoDelPadre}}</span></p>
 <button (click)="enviarMensajeAlPadre()">Enviar mensaje al padre</button>
