--- a/src/app/padre/padre.component.html
+++ b/src/app/padre/padre.component.html
@@ -1,4 +1,4 @@
-<p>padre works!</p>
+<p appP>padre works!</p>
 <p>variable compartida en el componente Padre: <span>{{ejemploS.getVariableCompartida()}}</span></p>
 <p>datos obtenidos del servicio Padre: </p>
 <pre>{{datosObtenidosDelServicio | json}}</pre>
